fix grid cell heights being too big.

--- a/style.css
+++ b/style.css
@@ -29,6 +29,7 @@ body {
 }
 
 .type-table-header > img {
+  display: block;
   width: 30px;
   margin: 3px;
 }
